Fixed top section alignment of content

--- a/less/index.less
+++ b/less/index.less
@@ -65,23 +65,15 @@ html, body {
 	font-family: 'Comfortaa', cursive;
 }
 
-.container .name {
+.name {
 	margin-top: 50px;
 	border: 2px solid black;
 	padding: 20px 100px;
 	border-radius: 10px;
-	font-size: 36px;
+	font-size: 2.5rem;
 }
 
-.top-content {
-	display: flex;
-	justify-content: center;
-}
-
-.top-section .job-title {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	margin-top: 25px;
-	align-content: center;
+.job-title {
+	text-align: center;
+	margin-top: 30px;
 }
